# pico-stdio-ble

./: CMakeLists.txt  LICENSE.md  README.md  demo.c  pico_stdio_ble.cmake  pico_stdio_ble.gatt  stdio_ble.c
include/: btstack_config.h  stdio_ble.h
